syntax = "proto3";

package protos;
import "google/protobuf/timestamp.proto";

option go_package = "orch-go/gen/protos;protos";

message GetAllRequest {
    int32 pageN = 1;
    int32 pageSize = 2;
}

message DateOnly {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message GetByDateRangeRequest{
  google.protobuf.Timestamp fromDate = 1;
  google.protobuf.Timestamp toDate = 2;
  optional int32 pageN = 3;
  optional int32 pageSize = 4;
}
